Add getTestByID
