# restAPI/api/routes/Covtest-route.js
@@ -87,4 +87,8 @@ router.get('/nTestsPerson/:id', authorize(['ADM']), function (req, res) {
     Covtest.nTestsPerson(req, res)
 })
 
+router.get('/:id', authorize(['TECH']), function(req, res){
+    Covtest.getTestByID(req,res)
+})
+
 module.exports = router;
